T87 release 4.2.0.6: 6D brand fix, Alpine image (0 CVE), release doc + frontend README
- Brand text: "6d Analytical Engine" -> "6D Analytical Engine" (page title + not-ready notice).
- Docker image: FROM nginx:1.31.3 (Debian) -> nginx:1.31.3-alpine + `apk --no-cache upgrade`.
  Debian dragged in perl/ncurses/util-linux etc. (Trivy: 5 CRITICAL + 48 HIGH, many with no
  Debian fix) that a static-file server never uses; Alpine's busybox base takes it to
  0 CRITICAL / 0 HIGH. run.sh is pure POSIX sh (eval/echo render, no envsubst) so it runs
  unchanged on busybox — deploy-time docker-config.js rendering re-verified.
- RELEASE.md -> v4.2.0.6 release notes (Phase C complete: AngularJS fully removed, pure
  Angular 21, npm audit 0, Alpine image, structure, UI polish).
- frontend/README.md rewritten for the pure-Angular-21 app: build/run, the client/app
  structure (core/api/services/directives/components/modals — no ng2/), Docker/Alpine +
  Trivy, dropped the stale .spec.js unit-test section.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>